<resources>
    <string name="app_name">Guess</string>
    <string name="action_settings">Settings</string>
    <string name="please_enter_a_number_1_10">Please enter a Number(1~10)</string>
    <string name="go">GO</string>
    <string name="excellent">Excellent! The number is</string>
    <string name="bigger">Bigger</string>
    <string name="smaller">Smaller</string>
    <string name="ok">OK</string>
    <string name="result">Result</string>
    <string name="you_got_it">You got it, The number is</string>
    <string name="sure">Are you sure replay?</string>
    <string name="replay">Replay</string>
    <string name="yes">YES</string>
</resources>
